--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shaozeming/xunsearch",
+    "name": "chasechan/xunsearch",
     "description": "xunsearch【讯搜全文索引】composer package",
     "require-dev": {
         "phpunit/phpunit": "^6.3",
@@ -11,18 +11,18 @@
     },
     "authors": [
         {
-            "name": "ShaoZeMing",
-            "email": "szm19920426@gmail.com"
+            "name": "chasechan",
+            "email": "1771430144@qq.com"
         }
     ],
     "autoload": {
         "psr-4": {
-            "ShaoZeMing\\Xunsearch\\": "./src"
+            "chaserchan\\xunsearch\\": "./src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "ShaoZeMing\\Xunsearch\\Tests\\": "./tests"
+            "chaserchan\\xunsearch\\Tests\\": "./tests"
         },
         "classmap": ["src/vendor/lib/"]
     }
